Converted to bootstrap-stylus.

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 
     <!-- social media tags -->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
@@ -22,12 +22,88 @@
     </script>
   </head>
   <body>
-    nav
-
+    <div class="container">
+      <div class="navbar navbar-default">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" ng-init="menuCollapsed = true"
+            ng-click="menuCollapsed = ! menuCollapsed">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="navbar-brand">
+            SS
+            <small>
+              <a href="http://github.com/malwatt/ngbp/blob/v<%= version %>-release/CHANGELOG.md#">
+                v<%= version %>
+              </a>
+            </small>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse" collapse="menuCollapsed">
+          <ul class="nav navbar-nav">
+            <li ui-sref-active="active">
+              <a href ui-sref="home">
+                <i class="fa fa-home"></i>
+                Home
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="about">
+                <i class="fa fa-info-circle"></i>
+                About
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="contacts">
+                <i class="fa fa-users"></i>
+                Contacts
+              </a>
+            </li>
+		  </div>
+		</div>
+	  </div>
+<!-- <div class="nav">
+      <h1>SS</h1>
+	  <ul>
+        <li ui-sref-active="active">
+          <a href ui-sref="home">
+            Home
+          </a>
+        </li>
+        <li ui-sref-active="active">
+          <a href ui-sref="about">
+            About
+          </a>
+        </li>
+        <li ui-sref-active="active">
+          <a href ui-sref="contacts">
+            Contacts
+          </a>
+        </li>
+	  </ul>
+    </div>
+-->	
     <div class="container" ui-view="main"></div>
 
     <footer class="footer">
-      footer
+      <div class="container">
+        <div class="footer-inner">
+          <ul class="social">
+            <li><a target="_blank" href="http://gplus.to/joshdmiller"><i class="fa fa-google-plus-sign"></i></a></li>
+            <li><a target="_blank" href="http://twitter.com/studio_suite"><i class="fa fa-twitter-sign"></i></a></li>
+            <li><a target="_blank" href="http://linkedin.com/in/joshdmiller"><i class="fa fa-linkedin-sign"></i></a></li>
+            <li><a target="_blank" href="http://github.com/malwatt/ngbp"><i class="fa fa-github-sign"></i></a></li>
+          </ul>
+          
+          <p>
+            (c) 2013 <a href="http://www.studiosuite.com">AlterMedia, Inc.</a>
+            <br />
+            SSangular is built on <a href="http://www.angularjs.org">AngularJS</a>.        
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
